# TrajectoryCollection

./: .clang-format-common.sh  CMakeLists.txt  README.md  _config.yml  package.xml  robots.txt
.github/workflows/: ci-catkin.yaml  ci-colcon.yaml  ci-standalone.yaml  package.yaml
cmake/: Config.cmake.in
debian/: changelog  control  copyright
doc/: CMakeLists.txt
doxygen/: BangBangInterpolator_8h.html  BangBangInterpolator_8h__incl.map  BangBangInterpolator_8h__incl.md5  BangBangInterpolator_8h_source.html  CubicHermiteSpline_8h.html  CubicHermiteSpline_8h__dep__incl.map  CubicHermiteSpline_8h__dep__incl.md5  CubicHermiteSpline_8h__incl.map  CubicHermiteSpline_8h__incl.md5  CubicHermiteSpline_8h_source.html  CubicInterpolator_8h.html  CubicInterpolator_8h__incl.map  CubicInterpolator_8h__incl.md5  CubicInterpolator_8h_source.html  CubicSpline_8h.html  CubicSpline_8h__incl.map  CubicSpline_8h__incl.md5  CubicSpline_8h_source.html  ElementInterpolation_8h.html  ElementInterpolation_8h__dep__incl.map  ElementInterpolation_8h__dep__incl.md5  ElementInterpolation_8h__incl.map  ElementInterpolation_8h__incl.md5  ElementInterpolation_8h_source.html  Func_8h.html  Func_8h__dep__incl.map  Func_8h__dep__incl.md5  Func_8h__incl.map  Func_8h__incl.md5  Func_8h_source.html  Interpolator_8h.html  Interpolator_8h__dep__incl.map  Interpolator_8h__dep__incl.md5  Interpolator_8h__incl.map  Interpolator_8h__incl.md5  Interpolator_8h_source.html  README_8md.html  annotated.html  classTrajColl_1_1BangBangInterpolator-members.html  classTrajColl_1_1BangBangInterpolator.html  (+101 more)
doxygen/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+15 more)
include/: CMakeLists.txt
include/TrajColl/: BangBangInterpolator.h  CubicHermiteSpline.h  CubicInterpolator.h  CubicSpline.h  ElementInterpolation.h  Func.h  Interpolator.h
include/TrajectoryCollection/: CubicHermiteSpline.h  CubicInterpolator.h  CubicSpline.h  Func.h
src/: CMakeLists.txt  CubicHermiteSpline.cpp  CubicSpline.cpp
tests/: CMakeLists.txt
tests/src/: TestBangBangInterpolator.cpp  TestCubicHermiteSpline.cpp  TestCubicInterpolator.cpp  TestCubicSpline.cpp  TestFunc.cpp
