<package format="2">
  <name>trajectory_collection</name>
  <version>0.1.0</version>
  <description>
    Trajectory functions for robot control
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/trajectory_collection</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>eigen</build_depend>

  <doc_depend>doxygen</doc_depend>
</package>
