<package format="3">
  <name>trajectory_collection</name>
  <version>0.1.0</version>
  <description>
    Trajectory functions for robot control
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/trajectory_collection</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>eigen</build_depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
